# Prompt-Architect-Analyst

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN_OSS.md  README.md  codecov.yml  insight.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_bandit.py  check_ci_gate.py
.github/workflows/: ci.yml  pr_checks.yml
src/: __init__.py  analyzer.py  archetypes.py  cli.py  cli_onboarding.py  config.py  corpus.py  errors.py  i18n.py  llm.py  llm_cache.py  logging_config.py  reporter.py  scorer.py  teaching_content.py  utils.py
src/reader/: __init__.py  base.py  opencode.py
tests/: test_analyzer.py  test_cli.py  test_cli_onboarding.py  test_config.py  test_corpus.py  test_errors.py  test_llm.py  test_llm_cache.py  test_logging_config.py  test_reader.py  test_reporter.py  test_scorer.py  test_utils.py
